<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/back"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="欢迎使用"
            android:textSize="35sp"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="70dp"
            android:layout_weight="1.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/textColorPrimary"
                android:text="@string/serversip"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/deviceid1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:background="@drawable/editviewcase"
                android:cursorVisible="true"
                android:hint="@string/serversiptext"
                android:selectAllOnFocus="true"
                android:textColorHint="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/textColorPrimary"
                android:text="@string/portnumber"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/loginname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:background="@drawable/editviewcase"
                android:cursorVisible="true"
                android:hint="@string/portnumbertext"
                android:maxLength="10"
                android:selectAllOnFocus="true"
                android:textColorHint="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/loginpasswd1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:background="@drawable/editviewcase"
                android:hint="@string/passwordtext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:selectAllOnFocus="true"
                android:textColorHint="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:layout_weight="1"
            >
            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textColorPrimary"
                android:text="记住"/>
            <Switch
                android:id="@+id/transmit_way"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:text="普通模式"
                android:textSize="18sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/loginbutton"
                android:text="重置"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="75dp"
                android:layout_weight="1"
                android:background="@drawable/loginbutton"
                android:text="连接"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>